fix: align erstvermarktung checkbox

--- a/app/assets/stylesheets/cms/partials/_layout.sass
+++ b/app/assets/stylesheets/cms/partials/_layout.sass
@@ -17,6 +17,8 @@ body
 
 .navbar-inner
   +linear-gradient(color-stops(lighten(#0A1930, 10%), darken(#0A1930, 10%)))
+  filter: none
+  background-color: #0A1930
 
 .brand
   +hide-text
